--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,10 +20,17 @@ jobs:
       contents: read
       packages: write
       security-events: write
-    
+     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      
+    - name: Debug - List files
+      run: |
+        echo "Files in root directory:"
+        ls -la
+        echo "Go module files:"
+        ls -la go.* || echo "No go.* files found"
       
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -71,7 +78,7 @@ jobs:
         
     - name: Upload Trivy scan results to GitHub Security tab
       if: github.event_name != 'pull_request'
-      uses: github/codeql-action/upload-sarif@v2
+      uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: 'trivy-results.sarif'
 
